razorpay integration done , ui made more attractive
